update fig code

--- a/code/pycode/sum_climatology_fig.ipynb
+++ b/code/pycode/sum_climatology_fig.ipynb
@@ -9,10 +9,14 @@
     "import matplotlib.pyplot as plt\n",
     "# from erddapClient import ERDDAP_Griddap\n",
     "from netCDF4 import Dataset\n",
-    "from matplotlib import colormaps\n",
     "import numpy as np\n",
     "import xarray as xr\n",
-    "import cmocean"
+    "import cmocean\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.basemap import Basemap\n",
+    "from matplotlib import colors"
    ]
   },
   {
@@ -66,9 +70,7 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.basemap import Basemap\n",
+    "divnorm = colors.TwoSlopeNorm(vmin = np.nanmin(ras.data), vcenter = 0, vmax = np.nanmax(ras.data))\n",
     "\n",
     "# Calculate the bounds of the data\n",
     "lon_bounds = [ras.y.min(), ras.y.max()]\n",
@@ -85,7 +87,7 @@
     "x_map, y_map = np.meshgrid(ras.y, ras.x)\n",
     "x, y = m(x_map, y_map)\n",
     "# Plot data.\n",
-    "contour = m.contourf(x, y, ras, cmap = cmocean.cm.tarn_r, levels=100, extend='both')\n",
+    "contour = m.contourf(x, y, ras, cmap = cmocean.cm.tarn_r, levels=100, extend='both', norm=divnorm)\n",
     "m.fillcontinents(color = 'black')\n",
     "# Add grid lines\n",
     "parallels = m.drawparallels(np.arange(18, 40, 2), labels=[1,0,0,0], textcolor = 'black', color = \"dimgrey\", fontsize=10, dashes=(3, 5), linewidth = 0.6)\n",
@@ -93,7 +95,7 @@
     "# Draw parallels and meridians with customized gridline alpha and label colors\n",
     "m.drawcoastlines(color='black')\n",
     "# add colorbar.\n",
-    "c = ax1.contourf(ras.y, ras.x, ras, levels = 50, cmap = cmocean.cm.tarn_r)\n",
+    "c = ax1.contourf(ras.y, ras.x, ras, levels = 50, cmap = cmocean.cm.tarn_r, norm=divnorm)\n",
     "cbar = fig.colorbar(c, shrink = 0.965, pad = 0.02)\n",
     "plt.title(\"Summertime mean chlorophyll anomaly from 1997 to 2023 [$mg$ $m^{-3}$]\")\n",
     "plt.savefig('../figures/climatology_chl_20240813.png', bbox_inches='tight', dpi=300)\n",
