py climate slope script begining

--- a/code/pycode/test.ipynb
+++ b/code/pycode/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,23 +31,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts = ras[:, i, j]\n",
-    "  \n",
-    "# Skip cells with all NaN values\n",
-    "if np.all(np.isnan(ts)):\n",
-    "    seascli_slopes[i, j] = np.nan\n",
-    "    seascli_p_values[i, j] = np.nan\n",
-    "    continue\n",
-    "        \n",
+    "ts = ras[:, 1, 1]\n",
     "# Convert to pandas Series\n",
-    "pix = pd.Series(ts, index=pd.date_range(\"1-1-1998\", periods=len(ts), freq=\"M\"), name=\"chl\")\n",
+    "pix = pd.Series(ts, index=pd.date_range(\"1-1-1998\", periods=len(ts), freq=\"ME\"), name=\"chl\")\n",
     "# Apply STL decomposition\n",
-    "stl = STL(pix, seasonal=13, robust=True)\n",
+    "stl = STL(pix.ffill(), seasonal=13, robust=True)\n",
     "fit = stl.fit()\n",
     "        \n",
     "# Compute the seascli component: trend + residual\n",
     "trend = fit.trend #.dropna()  # Extract trend component\n",
     "residual = fit.resid #.dropna()  # Extract residual (anomaly) component"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1998-01-31    0.048690\n",
+       "1998-02-28    0.047947\n",
+       "1998-03-31    0.047230\n",
+       "1998-04-30    0.046545\n",
+       "1998-05-31    0.045896\n",
+       "                ...   \n",
+       "2023-07-31    0.039867\n",
+       "2023-08-31    0.039497\n",
+       "2023-09-30    0.039131\n",
+       "2023-10-31    0.038771\n",
+       "2023-11-30    0.038416\n",
+       "Freq: ME, Name: trend, Length: 311, dtype: float64"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trend"
    ]
   },
   {
@@ -104,7 +128,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.0"
   }
  },
